--- a/copy.ipynb
+++ b/copy.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "id": "62e38da1",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "id": "59bfd444",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "id": "ca63555d",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "4    vse       0.082935      -0.055761       10.665180  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "id": "81aaa303",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
        "max         60.669983  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,38 +397,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "id": "6ebd5676",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 225445 entries, 0 to 225444\n",
-      "Data columns (total 11 columns):\n",
-      " #   Column          Non-Null Count   Dtype  \n",
-      "---  ------          --------------   -----  \n",
-      " 0   issue_reported  225445 non-null  object \n",
-      " 1   Latitude        225445 non-null  float64\n",
-      " 2   Longitude       225445 non-null  float64\n",
-      " 3   day             225445 non-null  int64  \n",
-      " 4   timespan_min    225445 non-null  float64\n",
-      " 5   hour            225445 non-null  int64  \n",
-      " 6   month           225445 non-null  int64  \n",
-      " 7   region          225445 non-null  object \n",
-      " 8   lat_from_cntr   225445 non-null  float64\n",
-      " 9   lon_from_cntr   225445 non-null  float64\n",
-      " 10  dist_from_cntr  225445 non-null  float64\n",
-      "dtypes: float64(6), int64(3), object(2)\n",
-      "memory usage: 18.9+ MB\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Traffic Hazard           92530\n",
+       "Crash Service            85024\n",
+       "COLLISION                25467\n",
+       "Stalled Vehicle          10818\n",
+       "LOOSE LIVESTOCK           5567\n",
+       "COLLISION WITH INJURY     5286\n",
+       "VEHICLE FIRE               753\n",
+       "Name: issue_reported, dtype: int64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.info()"
+    "df.issue_reported.value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "8ff80d43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(225445, 11)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "fc9ff81c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df[\"issue_reported\"].str.contains(\"COLLISION|VEHICLE FIRE|COLLISION WITH INJURY|Stalled Vehicle\")==False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "2a31d638",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Traffic Hazard     92530\n",
+       "Crash Service      85024\n",
+       "LOOSE LIVESTOCK     5567\n",
+       "Name: issue_reported, dtype: int64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.issue_reported.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02d2400e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3ecd1c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -441,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "id": "2a36eedc",
    "metadata": {},
    "outputs": [
@@ -570,7 +634,7 @@
        "4    vse       0.082935      -0.055761       10.665180  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "id": "ac6a9210",
    "metadata": {},
    "outputs": [
@@ -618,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "id": "81785191",
    "metadata": {},
    "outputs": [
@@ -628,7 +692,7 @@
        "array([2, 5, 1, 4, 0, 3, 6])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +762,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "bd717ab1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "0710b073",
    "metadata": {},
    "outputs": [
@@ -716,7 +788,7 @@
        "Name: timespan_min, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "17b150e9",
    "metadata": {},
    "outputs": [
@@ -751,7 +823,7 @@
        "Name: region, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d4fa3505",
    "metadata": {},
    "outputs": [
@@ -899,7 +971,7 @@
        "4      10       0.082935      -0.055761       10.665180  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "6616e839",
    "metadata": {},
    "outputs": [
@@ -1037,7 +1109,7 @@
        "4      -0.055761       10.665180  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "5150aa8d",
    "metadata": {},
    "outputs": [],
@@ -1093,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "acce04bb",
    "metadata": {},
    "outputs": [],
@@ -1103,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "e11a173d",
    "metadata": {},
    "outputs": [],
@@ -1113,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "0fcafbf5",
    "metadata": {},
    "outputs": [],
@@ -1123,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "3429cbc0",
    "metadata": {},
    "outputs": [],
@@ -1133,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "19f09ae4",
    "metadata": {},
    "outputs": [],
@@ -1167,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 20,
    "id": "6f04b81e",
    "metadata": {},
    "outputs": [],
@@ -1177,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 21,
    "id": "61b87f47",
    "metadata": {},
    "outputs": [],
@@ -1187,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 22,
    "id": "b323bda1",
    "metadata": {},
    "outputs": [],
@@ -1197,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 23,
    "id": "b0ae821a",
    "metadata": {},
    "outputs": [],
@@ -1207,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 24,
    "id": "fe5864fd",
    "metadata": {},
    "outputs": [
@@ -1349,7 +1421,7 @@
        "4        -0.523560  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1361,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 25,
    "id": "098a1a38",
    "metadata": {},
    "outputs": [],
@@ -1371,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 26,
    "id": "93abcc0d",
    "metadata": {},
    "outputs": [],
@@ -1381,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 27,
    "id": "3cfc42f9",
    "metadata": {},
    "outputs": [
@@ -1580,7 +1652,7 @@
        "[5 rows x 48 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1591,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 28,
    "id": "603cb9d0",
    "metadata": {},
    "outputs": [],
@@ -1601,14 +1673,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 29,
    "id": "1b039e7a",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "y = df.timespan_min"
+    "y = df.issue_reported"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "93405838",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    2\n",
+       "1    5\n",
+       "2    2\n",
+       "3    5\n",
+       "4    2\n",
+       "Name: issue_reported, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "16c3a6a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = pd.Series(y).where(lambda x : x!=2).dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "bf078cde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1     5.0\n",
+       "3     5.0\n",
+       "6     5.0\n",
+       "7     5.0\n",
+       "8     5.0\n",
+       "9     5.0\n",
+       "10    5.0\n",
+       "11    1.0\n",
+       "13    4.0\n",
+       "15    5.0\n",
+       "17    5.0\n",
+       "18    5.0\n",
+       "19    5.0\n",
+       "20    5.0\n",
+       "21    5.0\n",
+       "23    0.0\n",
+       "24    4.0\n",
+       "25    5.0\n",
+       "26    5.0\n",
+       "27    5.0\n",
+       "Name: issue_reported, dtype: float64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "983f19e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
